[gd_scene load_steps=20 format=4 uid="uid://jiqwnbqf8dfb"]

[ext_resource type="Script" path="res://scenes/terra.gd" id="1_i1bd1"]
[ext_resource type="Script" path="res://scripts/TimeMgr.gd" id="2_gl64k"]
[ext_resource type="Script" path="res://scripts/dataclass/date_time.gd" id="3_ghkua"]
[ext_resource type="Script" path="res://scripts/game_system/map_mgr.gd" id="4_1kwgi"]
[ext_resource type="Texture2D" uid="uid://c667m4m74se4h" path="res://assets/image/terra_hexmap.png" id="5_a81k7"]
[ext_resource type="Script" path="res://scenes/terra_map.gd" id="5_qqojh"]
[ext_resource type="TileSet" uid="uid://cb0ntb3ojridd" path="res://assets/res/territory_border_tileset.tres" id="8_g2l1s"]
[ext_resource type="Shader" path="res://shaders/change_color.gdshader" id="8_kuifg"]
[ext_resource type="Script" path="res://scenes/map_light.gd" id="9_d75nb"]
[ext_resource type="Script" path="res://scripts/camera_ctrl.gd" id="10_46ghp"]
[ext_resource type="PackedScene" uid="uid://b78gvijnruwny" path="res://scenes/gui/components/status_bar.tscn" id="11_ytqrf"]
[ext_resource type="PackedScene" uid="uid://uh5kqp23dt83" path="res://scenes/gui/components/ui_bottom.tscn" id="12_oou75"]

[sub_resource type="Resource" id="Resource_bos8w"]
script = ExtResource("3_ghkua")
minute = 30
hour = 8
day = 23
month = 12
year = 1098

[sub_resource type="Resource" id="Resource_83qvp"]
script = ExtResource("3_ghkua")
minute = 0
hour = 7
day = 1
month = 1
year = 1098

[sub_resource type="Resource" id="Resource_dpsbx"]
script = ExtResource("3_ghkua")
minute = 0
hour = 18
day = 1
month = 1
year = 1098

[sub_resource type="Resource" id="Resource_7hgro"]
script = ExtResource("3_ghkua")
minute = 0
hour = 20
day = 1
month = 1
year = 1

[sub_resource type="Resource" id="Resource_scgxc"]
script = ExtResource("3_ghkua")
minute = 0
hour = 5
day = 1
month = 1
year = 1098

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1hfcp"]
shader = ExtResource("8_kuifg")
shader_parameter/from = Color(0.0352941, 0.960784, 0.780392, 1)
shader_parameter/to = Color(1, 1, 0, 1)
shader_parameter/threshold = 0.1

[sub_resource type="LabelSettings" id="LabelSettings_fpuuj"]
font_size = 20
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[node name="World" type="Node2D"]
script = ExtResource("1_i1bd1")

[node name="TimeMgr" type="Node" parent="."]
script = ExtResource("2_gl64k")
date_time = SubResource("Resource_bos8w")
day_time = SubResource("Resource_83qvp")
twilight_time = SubResource("Resource_dpsbx")
night_time = SubResource("Resource_7hgro")
dawn_time = SubResource("Resource_scgxc")

[node name="MapMgr" type="Node" parent="."]
script = ExtResource("4_1kwgi")
area = Rect2i(-10, -8, 20, 16)

[node name="Map" type="Node2D" parent="."]
script = ExtResource("5_qqojh")

[node name="TextureRect" type="Sprite2D" parent="Map"]
position = Vector2(-2392, 1560)
scale = Vector2(3.7, 3.758)
texture = ExtResource("5_a81k7")
metadata/_edit_lock_ = true

[node name="Blocks" type="TileMapLayer" parent="Map"]
tile_set = ExtResource("8_g2l1s")

[node name="territory" type="TileMapLayer" parent="Map"]
self_modulate = Color(1, 1, 1, 0)
tile_map_data = PackedByteArray("AAAKAP3/BAACAAIAAAALAPz/BAACAAIAAAALAPv/BAACAAIAAAALAPr/BAACAAIAAAAKAPv/BAACAAIAAAAJAPv/BAACAAIAAAAKAPr/BAACAAIAAAAJAPr/BAACAAIAAAAIAPn/BAACAAIAAAAAAP7/BAAIAAEAAAD///3/BAAIAAEAAAD9////BAAIAAEAAAD+//7/BAAIAAEAAAD9//7/BAAIAAEAAAD8//3/BAAIAAEAAAD9//z/BAAIAAEAAAD9//3/BAAIAAEAAAD+//z/BAAIAAEAAAD8//z/BAAIAAEAAAD7//3/BAAIAAEAAAD7//7/BAAIAAEAAAD6////BAAIAAEAAAD5////BAAIAAEAAAD5/wAABAAIAAEAAAD4////BAAIAAEAAAD5//7/BAAIAAEAAAD6//7/BAAIAAEAAAD6//3/BAAIAAEAAAD7//z/BAAIAAEAAAD6//z/BAAIAAEAAAD5//3/BAAIAAEAAAD4//3/BAAIAAEAAAD4//7/BAAIAAEAAAD3//3/BAAIAAEAAAD2//3/BAAIAAEAAAD2//7/BAAIAAEAAAD2////BAAIAAEAAAD3//7/BAAIAAEAAAD2/wAABAAIAAEAAAD1////BAAIAAEAAAD0////BAAIAAEAAAD1/wAABAAIAAEAAAD0/wAABAAIAAEAAADz/wEABAAIAAEAAAD0/wEABAAIAAEAAAD0/wIABAAIAAEAAADz/wAABAAIAAEAAADy/wEABAAIAAEAAADy/wAABAAIAAEAAADy////BAAIAAEAAADz////BAAIAAEAAAD0//7/BAAIAAEAAAD1//7/BAAIAAEAAAD1//3/BAAIAAEAAAD0//3/BAAIAAEAAADz//3/BAAIAAEAAADz//7/BAAIAAEAAADy//7/BAAIAAEAAADx////BAAIAAEAAADz//z/BAAIAAEAAAD0//z/BAAIAAEAAADy//3/BAAIAAEAAADx//v/BAAIAAEAAADy//v/BAAIAAEAAADy//z/BAAIAAEAAADx//z/BAAIAAEAAADw//z/BAAIAAEAAADv//z/BAAIAAEAAADu//z/BAAIAAEAAADt//z/BAAIAAEAAADs//z/BAAIAAEAAADr//z/BAAIAAEAAADr//v/BAAIAAEAAADw//3/BAAIAAEAAADv//3/BAAIAAEAAADu//3/BAAIAAEAAADt//3/BAAIAAEAAADs//3/BAAIAAEAAADr//3/BAAIAAEAAADx//7/BAAIAAEAAADw//7/BAAIAAEAAADv//7/BAAIAAEAAADu//7/BAAIAAEAAADt//7/BAAIAAEAAADs//7/BAAIAAEAAADr//7/BAAIAAEAAADv////BAAIAAEAAADu////BAAIAAEAAADp//v/BAAIAAEAAADq//z/BAAIAAEAAADp//z/BAAIAAEAAADo//z/BAAIAAEAAADp//3/BAAIAAEAAADq//3/BAAIAAEAAADy//n/BAAIAAEAAADz//r/BAAIAAEAAAD3//j/BAAIAAEAAAD4//j/BAAIAAEAAAD4//n/BAAIAAEAAAD3//n/BAAIAAEAAAD3//r/BAAIAAEAAAD4//r/BAAIAAEAAAD5//r/BAAIAAEAAAD6//r/BAAIAAEAAAD6//v/BAAIAAEAAAD5//v/BAAIAAEAAAD5//z/BAAIAAEAAAD4//v/BAAIAAEAAAD3//v/BAAIAAEAAAD3//z/BAAIAAEAAAD6//n/BAAIAAEAAAD7//n/BAAIAAEAAAD8//n/BAAIAAEAAAD9//n/BAAIAAEAAAD+//n/BAAIAAEAAAD///n/BAAIAAEAAAAAAPn/BAAIAAEAAAABAPn/BAAIAAEAAAACAPn/BAAIAAEAAAADAPr/BAAIAAEAAAACAPr/BAAIAAEAAAABAPr/BAAIAAEAAAAAAPr/BAAIAAEAAAD///r/BAAIAAEAAAD+//r/BAAIAAEAAAD9//r/BAAIAAEAAAD8//r/BAAIAAEAAAD7//v/BAAIAAEAAAD8//v/BAAIAAEAAAD9//v/BAAIAAEAAAD+//v/BAAIAAEAAAD///v/BAAIAAEAAAAAAPv/BAAIAAEAAAABAPv/BAAIAAEAAAABAPz/BAAIAAEAAAAAAPz/BAAIAAEAAAD///z/BAAIAAEAAAD+//3/BAAIAAEAAAAEAPj/BAAIAAEAAAADAPj/BAAIAAEAAAACAPj/BAAIAAEAAAABAPj/BAAIAAEAAAAAAPj/BAAIAAEAAAD///j/BAAIAAEAAAD+//j/BAAIAAEAAAD+//f/BAAIAAEAAAD///f/BAAIAAEAAAAAAPf/BAAIAAEAAAABAPf/BAAIAAEAAAACAPf/BAAIAAEAAAADAPf/BAAIAAEAAAAEAPf/BAAIAAEAAAAFAPf/BAAIAAEAAAAFAPb/BAAIAAEAAAAEAPb/BAAIAAEAAAADAPb/BAAIAAEAAAD///b/BAAIAAEAAAD+//b/BAAIAAEAAAD9//b/BAAIAAEAAAD9//X/BAAIAAEAAADv/xsABAAAAAEAAADw/xwABAAAAAEAAADw/xgABAAAAAEAAAD0/xUABAAAAAEAAAD0/xYABAAAAAEAAAD1/xYABAAAAAEAAAD2/xYABAAAAAEAAAD3/xYABAAAAAEAAAD3/xcABAAAAAEAAAD4/xgABAAAAAEAAAD4/xkABAAAAAEAAAD3/xkABAAAAAEAAAD2/xkABAAAAAEAAAD1/xkABAAAAAEAAAD0/xkABAAAAAEAAADz/xkABAAAAAEAAADy/xkABAAAAAEAAADz/xgABAAAAAEAAAD0/xgABAAAAAEAAAD1/xgABAAAAAEAAAD2/xgABAAAAAEAAAD3/xgABAAAAAEAAAD1/xcABAAAAAEAAAD0/xcABAAAAAEAAAD3/xoABAAAAAEAAAD2/xoABAAAAAEAAAD1/xoABAAAAAEAAAD0/xoABAAAAAEAAADz/xoABAAAAAEAAAD0/xsABAAAAAEAAADz/xsABAAAAAEAAADz/xwABAAAAAEAAADy/xwABAAAAAEAAADx/x0ABAAAAAEAAADy/x4ABAAAAAEAAADx/x8ABAAAAAEAAADy/x8ABAAAAAEAAAD2/xwABAAAAAEAAAD3/xwABAAAAAEAAAD3/xsABAAAAAEAAAD2/xsABAAAAAEAAAD//wcABAAHAAIAAAD3/wsABAAIAAMAAAD4/wsABAAIAAMAAAD5/woABAAIAAMAAAD6/woABAAIAAMAAAD6/wkABAAIAAMAAAD7/wkABAAIAAMAAAD7/wgABAAIAAMAAAD6/wgABAAIAAMAAADk/wUABAAJAAEAAADl/wQABAAJAAEAAADm/wQABAAJAAEAAADm/wMABAAJAAEAAADl/wMABAAJAAEAAADm/wIABAAJAAEAAADn/wIABAAJAAEAAADm/wEABAAJAAEAAADl/wEABAAJAAEAAADk/wEABAAJAAEAAADl/wIABAAJAAEAAADk/wIABAAJAAEAAADj/wEABAAJAAEAAADk/wAABAAJAAEAAADj/wAABAAJAAEAAADi/wEABAAJAAEAAADj/wIABAAJAAEAAADj/wMABAAJAAEAAADi/wMABAAJAAEAAADh/wMABAAJAAEAAADi/wIABAAJAAEAAADh/wIABAAJAAEAAADg/wIABAAJAAEAAADf/wIABAAJAAEAAADe/wIABAAJAAEAAADd/wIABAAJAAEAAADc/wIABAAJAAEAAADd/wEABAAJAAEAAADc/wEABAAJAAEAAADb/wEABAAJAAEAAADc/wAABAAJAAEAAADd/wAABAAJAAEAAADd/wMABAAJAAEAAADe/wMABAAJAAEAAADf/wMABAAJAAEAAADg/wMABAAJAAEAAADj/wQABAAJAAEAAADi/wQABAAJAAEAAADh/wQABAAJAAEAAADg/wQABAAJAAEAAADf/wQABAAJAAEAAADe/wQABAAJAAEAAADe/wUABAAJAAEAAADf/wUABAAJAAEAAADg/wUABAAJAAEAAADh/wUABAAJAAEAAADi/wUABAAJAAEAAADj/wYABAAJAAEAAADi/wYABAAJAAEAAADh/wYABAAJAAEAAADg/wYABAAJAAEAAADf/wYABAAJAAEAAADf/wcABAAJAAEAAADg/wcABAAJAAEAAADh/wcABAAJAAEAAADi/wcABAAJAAEAAADk/wgABAAJAAEAAADj/wgABAAJAAEAAADi/wgABAAJAAEAAADh/wgABAAJAAEAAADg/wgABAAJAAEAAADf/wgABAAJAAEAAADe/wkABAAJAAEAAADf/wkABAAJAAEAAADg/wkABAAJAAEAAADj/wkABAAJAAEAAAD2/xAABAAAAAAAAAD1/xEABAAAAAAAAAD2/xEABAAAAAAAAADq/xIABAAEAAMAAAANAP3/BAADAAIAAAANAP7/BAADAAIAAAAMAP//BAADAAIAAAALAP//BAADAAIAAAALAP7/BAADAAIAAAAKAP7/BAADAAIAAAALAP3/BAADAAIAAAAQAAEABAADAAIAAAAPAAEABAADAAIAAAAOAAEABAADAAIAAAANAAEABAADAAIAAAAMAAEABAADAAIAAAALAAEABAADAAIAAAAKAAEABAADAAIAAAAJAAEABAADAAIAAAAIAAEABAADAAIAAAAHAAEABAADAAIAAAAGAAEABAADAAIAAAAFAAEABAADAAIAAAAEAAEABAADAAIAAAADAAEABAADAAIAAAAJAAAABAADAAIAAAAIAAAABAADAAIAAAAHAAAABAADAAIAAAAGAAAABAADAAIAAAAFAAAABAADAAIAAAAEAAAABAADAAIAAAAJAP//BAADAAIAAAANAP//BAADAAIAAAAOAAAABAADAAIAAAANAAAABAADAAIAAAAMAAAABAADAAIAAAAEAP7/BAADAAIAAAADAP7/BAADAAIAAAADAP//BAADAAIAAAACAP//BAADAAIAAAABAP//BAADAAIAAAD//wAABAADAAIAAAACAAIABAADAAIAAAAFAAIABAADAAIAAAAGAAIABAADAAIAAAAHAAIABAADAAIAAAAIAAIABAADAAIAAAAJAAIABAADAAIAAAAKAAIABAADAAIAAAALAAIABAADAAIAAAAMAAIABAADAAIAAAANAAIABAADAAIAAAAOAAIABAADAAIAAAANAAMABAADAAIAAAAMAAMABAADAAIAAAAMAAQABAADAAIAAAALAAMABAADAAIAAAAKAAMABAADAAIAAAAKAAQABAADAAIAAAAJAAQABAADAAIAAAAIAAMABAADAAIAAAAIAAQABAADAAIAAAAHAAMABAADAAIAAAAHAAQABAADAAIAAAAGAAMABAADAAIAAAAFAAMABAADAAIAAAAJAAMABAADAAIAAAANAAQABAADAAIAAAALAAQABAADAAIAAAALAAUABAADAAIAAAAMAAYABAADAAIAAAALAAcABAADAAIAAAALAAYABAADAAIAAAAKAAUABAADAAIAAAAJAAUABAADAAIAAAAIAAUABAADAAIAAAAHAAUABAADAAIAAAAGAAUABAADAAIAAAAFAAYABAADAAIAAAAGAAYABAADAAIAAAAHAAYABAADAAIAAAAIAAYABAADAAIAAAAJAAYABAADAAIAAAAHAAcABAADAAIAAAAIAAcABAADAAIAAAAJAAcABAADAAIAAAAHAAgABAADAAIAAAAIAAgABAADAAIAAAAJAAgABAADAAIAAAADAAYABAADAAIAAAAJAAkABAADAAIAAADk/xAABAAAAAMAAADj/xEABAAAAAMAAADk/xEABAAAAAMAAADx/xEABAACAAAAAADw/xEABAACAAAAAADw/xAABAACAAAAAADv/w8ABAACAAAAAADw/w8ABAACAAAAAADx/w8ABAACAAAAAADy/w8ABAACAAAAAADy/xAABAACAAAAAADx/xAABAACAAAAAADy/w4ABAACAAAAAADx/w4ABAACAAAAAADw/w4ABAACAAAAAADv/w4ABAACAAAAAADu/w4ABAACAAAAAADt/w4ABAACAAAAAADs/w8ABAACAAAAAADt/w8ABAACAAAAAADu/w8ABAACAAAAAADu/xAABAACAAAAAADu/xEABAACAAAAAADt/xEABAACAAAAAADt/xAABAACAAAAAADw/w0ABAACAAAAAADv/w0ABAACAAAAAADu/w0ABAACAAAAAADt/w0ABAACAAAAAADs/w0ABAACAAAAAADs/wwABAACAAAAAADr/wwABAACAAAAAADq/wsABAACAAAAAADp/wsABAACAAAAAADs/wsABAACAAAAAADt/wwABAACAAAAAADt/wsABAACAAAAAADu/wwABAACAAAAAADu/wsABAACAAAAAADv/wwABAACAAAAAADv/wsABAACAAAAAADw/wwABAACAAAAAADw/wsABAACAAAAAADx/wwABAACAAAAAADx/wsABAACAAAAAADu/woABAACAAAAAADv/woABAACAAAAAADw/woABAACAAAAAADx/woABAACAAAAAADy/woABAACAAAAAADu/wkABAACAAAAAADu/wgABAACAAAAAADu/wcABAACAAAAAADv/wgABAACAAAAAADu/wYABAACAAAAAADv/wYABAACAAAAAADw/wYABAACAAAAAADw/wcABAACAAAAAADx/wYABAACAAEAAADy/wYABAACAAEAAADz/wYABAACAAEAAAD0/wYABAACAAEAAAD1/wYABAACAAEAAAD2/wYABAACAAEAAAD1/wUABAACAAEAAAD0/wUABAACAAEAAADz/wUABAACAAEAAADy/wUABAACAAEAAADx/wcABAACAAEAAADy/wcABAACAAEAAADz/wcABAACAAEAAAD0/wcABAACAAEAAAD1/wcABAACAAEAAAD2/wcABAACAAEAAAD3/wcABAACAAEAAAD5/wcABAACAAEAAAD4/wgABAACAAEAAAD3/wgABAACAAEAAAD2/wgABAACAAEAAAD1/wgABAACAAEAAAD0/wgABAACAAEAAADz/wgABAACAAEAAADy/wgABAACAAEAAADx/wgABAACAAEAAADx/wkABAACAAEAAADy/wkABAACAAEAAADz/wkABAACAAEAAAD0/wkABAACAAEAAAD1/wkABAACAAEAAAD2/wkABAACAAEAAAD3/woABAACAAEAAAD2/woABAACAAEAAAD1/woABAACAAEAAAD0/woABAACAAEAAADz/woABAACAAEAAAD6/wEABAAIAAEAAAD6/wIABAAIAAEAAAD7/wIABAAIAAEAAAD3/wEABAAIAAEAAAD3/wIABAAIAAEAAAD2/wIABAAIAAEAAADz/wMABAAIAAEAAAD0/wMABAAIAAEAAAD1/wQABAAIAAEAAADp//n/BAAJAAAAAADp//j/BAAJAAAAAADo//j/BAAJAAAAAADn//j/BAAJAAAAAADn//n/BAAJAAAAAADn//r/BAAJAAAAAADm//r/BAAJAAAAAADp//r/BAAJAAAAAADo//r/BAAJAAAAAADn//v/BAAJAAAAAADn//f/BAAJAAAAAADo/wcABAAJAAIAAADo/wgABAAJAAIAAAD8/w0ABAAIAAAAAAD9/w4ABAAIAAAAAAD8/w8ABAAIAAAAAAD9/xAABAAIAAAAAAD+/xAABAAIAAAAAAD+/w8ABAAIAAAAAAD//w8ABAAIAAAAAAD//w0ABAAIAAAAAAAAAA4ABAAIAAAAAAAAABAABAAIAAAAAAD//xEABAAIAAAAAAD+/xEABAAIAAAAAAD+/xIABAAIAAAAAAD8/xEABAAIAAAAAAAAABIABAAIAAAAAAABABIABAAIAAAAAAACABEABAAIAAAAAAABABEABAAIAAAAAAACABMABAAIAAAAAAABABMABAAIAAAAAAD//xMABAAIAAAAAAADABQABAAIAAAAAAABABQABAAIAAAAAAABABUABAAIAAAAAAABABYABAAIAAAAAADi/wsABAAJAAEAAADi/wwABAAJAAEAAADq/wQABAAAAAIAAADq/wMABAAAAAIAAADr/wMABAAAAAIAAADs/wIABAAAAAIAAADr/wIABAAAAAIAAADt/wIABAAAAAIAAADu/wIABAAAAAIAAADu/wMABAAAAAIAAADt/wMABAAAAAIAAADt/wQABAAAAAIAAADu/wQABAAAAAIAAADr/wUABAAAAAIAAADx/wAABAAAAAIAAADw/wAABAAAAAIAAADv/wAABAAAAAIAAADu/wAABAAAAAIAAADt/wAABAAAAAIAAADs/wAABAAAAAIAAADr/wAABAAAAAIAAADq/wAABAAAAAIAAADr/wEABAAAAAIAAADs/wEABAAAAAIAAADt/wEABAAAAAIAAADu/wEABAAAAAIAAADw////BAAAAAIAAADt////BAAAAAIAAADs////BAAAAAIAAADr////BAAAAAIAAADq////BAAAAAIAAADX/wMABAACAAMAAADY/wMABAACAAMAAADZ/wMABAACAAMAAADa/wEABAACAAMAAADa/wAABAACAAMAAADZ/wEABAACAAMAAADY/wEABAACAAMAAADZ/wIABAACAAMAAADa/wIABAACAAMAAADc/wMABAACAAMAAADb/wMABAACAAMAAADd/wQABAACAAMAAADc/wQABAACAAMAAADb/wQABAACAAMAAADZ/wQABAACAAMAAADZ/wUABAACAAMAAADa/wUABAACAAMAAADb/wUABAACAAMAAADa/wYABAACAAMAAADZ/wYABAACAAMAAADY/wcABAACAAMAAADc/wYABAACAAMAAADd/wYABAACAAMAAADe/wYABAACAAMAAADb/wcABAACAAMAAADd/wcABAACAAMAAADe/wgABAACAAMAAADd/wkABAACAAMAAADY/xMABAAHAAMAAADX/xMABAAHAAMAAADX/xQABAAHAAMAAADW/xUABAAHAAMAAADV/xUABAAHAAMAAADY/xUABAAHAAMAAADX/xUABAAHAAMAAADX/xYABAAHAAMAAADT/xEABAAHAAMAAADW/w4ABAAHAAMAAADX/w8ABAAHAAMAAADY/w8ABAAHAAMAAADY/xAABAAHAAMAAADZ/xAABAAHAAMAAADa/xAABAAHAAMAAADb/xAABAAHAAMAAADc/xAABAAHAAMAAADd/xAABAAHAAMAAADd/w8ABAAHAAMAAADa/w8ABAAHAAMAAADa/xIABAAHAAMAAADa/xEABAAHAAMAAADb/xEABAAHAAMAAADc/xIABAAHAAMAAADc/xMABAAHAAMAAADc/xQABAAHAAMAAADb/xQABAAHAAMAAADa/xUABAAHAAMAAADb/xUABAAHAAMAAADc/xUABAAHAAMAAADd/xQABAAHAAMAAADe/xQABAAHAAMAAADf/xQABAAHAAMAAADg/xQABAAHAAMAAADg/xMABAAHAAMAAADf/xMABAAHAAMAAADe/xMABAAHAAMAAADd/xEABAAHAAMAAADe/xEABAAHAAMAAADf/xIABAAHAAMAAADe/xIABAAHAAMAAADk/xMABAAHAAMAAADm/xQABAAHAAMAAADo/xQABAAHAAMAAADo/xUABAAHAAMAAADp/xcABAAHAAMAAADo/xcABAAHAAMAAADo/xgABAAHAAMAAADn/xgABAAHAAMAAADm/xcABAAHAAMAAADm/xYABAAHAAMAAADl/xYABAAHAAMAAADk/xcABAAHAAMAAADl/xcABAAHAAMAAADl/xgABAAHAAMAAADk/xgABAAHAAMAAADj/xgABAAHAAMAAADi/xgABAAHAAMAAADi/xcABAAHAAMAAADj/xYABAAHAAMAAADi/xkABAAHAAMAAADj/xkABAAHAAMAAADk/xkABAAHAAMAAADl/xkABAAHAAMAAADn/xkABAAHAAMAAADn/xoABAAHAAMAAADp/xgABAAHAAMAAADq/xgABAAHAAMAAADp/xkABAAHAAMAAADq/xkABAAHAAMAAADr/xkABAAHAAMAAADr/xoABAAHAAMAAADq/xoABAAHAAMAAADp/xoABAAHAAMAAADo/xsABAAHAAMAAADh/xQABAAHAAMAAADh/xUABAAHAAMAAADg/xUABAAHAAMAAADg/xYABAAHAAMAAADh/xYABAAHAAMAAADg/xcABAAHAAMAAADf/xcABAAHAAMAAADf/xYABAAHAAMAAADe/xYABAAHAAMAAADe/xUABAAHAAMAAADd/xUABAAHAAMAAADd/xYABAAHAAMAAADc/xYABAAHAAMAAADb/xcABAAHAAMAAADc/xcABAAHAAMAAADd/xgABAAHAAMAAADe/xgABAAHAAMAAADf/xgABAAHAAMAAADe/xcABAAHAAMAAADf/xkABAAHAAMAAADe/xkABAAHAAMAAADd/xkABAAHAAMAAADb/xkABAAHAAMAAADa/xkABAAHAAMAAADZ/xcABAAHAAMAAADd/x0ABAAHAAMAAADd/xwABAAHAAMAAADc/xsABAAHAAMAAADd/xoABAAHAAMAAADe/xoABAAHAAMAAADf/xoABAAHAAMAAADf/xsABAAHAAMAAADe/xsABAAHAAMAAADf/xwABAAHAAMAAADg/xwABAAHAAMAAADg/xsABAAHAAMAAAAAAAAABAAGAAIAAAA=")
tile_set = ExtResource("8_g2l1s")

[node name="Land" type="TileMapLayer" parent="Map"]
visible = false
tile_map_data = PackedByteArray("AAAAAAAAAwAAAAAAAAD+/wYABAAAAAEAAAD9/wUABAAAAAEAAAD9/wYABAAAAAEAAAD8/wcABAAAAAEAAAD9/wgABAAAAAEAAAD+/wgABAAAAAEAAAD9/wcABAAAAAEAAAD+/wcABAAAAAEAAADn/wgABAAAAAIAAADm/wcABAAAAAIAAADl/wcABAAAAAIAAADm/wwABAAAAAIAAADm/wsABAAAAAIAAADn/woABAAAAAIAAADm/wkABAAAAAIAAADm/wgABAAAAAIAAADl/wkABAAAAAIAAADm/woABAAAAAIAAADl/wsABAAAAAIAAADl/wgABAAAAAIAAADk/wkABAAAAAIAAADl/woABAAAAAIAAADk/woABAAAAAIAAADk/wsABAAAAAIAAADl/wwABAAAAAIAAADl/w0ABAAAAAIAAADn/w0ABAAAAAIAAADo/w4ABAAAAAIAAADo/w8ABAAAAAIAAADo/xAABAAAAAIAAADn/xEABAAAAAIAAADh/xEABAAAAAIAAADh/xAABAAAAAIAAADg/xAABAAAAAIAAADh/w8ABAAAAAIAAADg/w8ABAAAAAIAAADf/xAABAAAAAIAAADe/w8ABAAAAAIAAADe/xAABAAAAAIAAADd/w8ABAAAAAIAAADc/w8ABAAAAAIAAADh/w0ABAAAAAIAAADg/w0ABAAAAAIAAADf/w0ABAAAAAIAAADe/w0ABAAAAAIAAADd/w0ABAAAAAIAAADc/w0ABAAAAAIAAADb/w0ABAAAAAIAAADa/w0ABAAAAAIAAADZ/w0ABAAAAAIAAADY/w0ABAAAAAIAAADX/w0ABAAAAAIAAADf/wsABAAAAAIAAADe/wsABAAAAAIAAADe/wwABAAAAAIAAADd/wsABAAAAAIAAADc/wsABAAAAAIAAADc/woABAAAAAIAAADb/wsABAAAAAIAAADb/woABAAAAAIAAADa/wsABAAAAAIAAADa/woABAAAAAIAAADZ/wkABAAAAAIAAADZ/wgABAAAAAIAAADi/woABAAAAAEAAADh/woABAAAAAEAAADh/wkABAAAAAEAAADh/wgABAAAAAEAAADi/wgABAAAAAEAAADw/wEABAAAAAEAAADv/wEABAAAAAEAAADw/wIABAAAAAEAAADv/wMABAAAAAEAAADv/wQABAAAAAEAAADu/wUABAAAAAEAAADv/wUABAAAAAEAAADv/wIABAAAAAEAAAD7/woABAAAAAEAAAD6/wkABAAAAAEAAAD6/wgABAAAAAEAAAD6/wcABAAAAAEAAAD5/wcABAAAAAEAAAD4/wcABAAAAAEAAAD4/wgABAAAAAEAAAD3/wkABAAAAAEAAAD4/wkABAAAAAEAAAD5/wkABAAAAAEAAAD5/wgABAAAAAEAAAD4/woABAAAAAEAAAA=")
tile_set = ExtResource("8_g2l1s")

[node name="Outposts" type="TileMapLayer" parent="Map"]
tile_map_data = PackedByteArray("AAAAAAAAAwAAAAAAAAA=")
tile_set = ExtResource("8_g2l1s")

[node name="Selected" type="TileMapLayer" parent="Map"]
tile_set = ExtResource("8_g2l1s")

[node name="Selector" type="TileMapLayer" parent="Map"]
material = SubResource("ShaderMaterial_1hfcp")
tile_map_data = PackedByteArray("AAAAAAEABgAHAAcAAAA=")
tile_set = ExtResource("8_g2l1s")

[node name="MapLight" type="DirectionalLight2D" parent="Map" node_paths=PackedStringArray("time_system")]
blend_mode = 2
script = ExtResource("9_d75nb")
day_light = Color(1, 1, 1, 1)
twilight_light = Color(1, 0.866667, 0.74902, 1)
night_light = Color(0.352941, 0.505882, 0.929412, 1)
dawn_light = Color(0.733333, 0.933333, 1, 1)
time_system = NodePath("../../TimeMgr")

[node name="CanvasLayer" type="CanvasLayer" parent="Map"]

[node name="MousePos" type="Label" parent="Map/CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -24.0
offset_right = 56.0
grow_vertical = 0
text = "(0,0)"
label_settings = SubResource("LabelSettings_fpuuj")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.8, 0.8)
limit_left = -9600
limit_top = -6000
limit_right = 5000
limit_bottom = 6000
limit_smoothed = true
position_smoothing_enabled = true
script = ExtResource("10_46ghp")
metadata/_edit_lock_ = true

[node name="StatusBar" parent="." node_paths=PackedStringArray("time_mgr") instance=ExtResource("11_ytqrf")]
time_mgr = NodePath("../TimeMgr")

[node name="UI" parent="." instance=ExtResource("12_oou75")]

[connection signal="day_state_changed" from="TimeMgr" to="TimeMgr" method="_on_day_state_changed"]
[connection signal="day_state_changed" from="TimeMgr" to="Map/MapLight" method="transition"]
[connection signal="cell_deselected" from="Map" to="." method="_on_map_cell_deselected"]
[connection signal="cell_deselected" from="Map" to="Map" method="clear_selected"]
[connection signal="cell_selected" from="Map" to="Camera2D" method="focus_on"]
[connection signal="housing_changed" from="Map" to="." method="update_housing_info"]
[connection signal="open_pause_menu" from="StatusBar" to="." method="open_pause_menu"]
[connection signal="side_panel_closed" from="UI" to="Map" method="clear_selected"]
